gdk: do not send leave event on touchpad button release

This is along the changes introduced in
bd55519f7e6bb5da2fdf6f5e99bd79213059f81b,
A TOUCHPAD device behaves like a mouse"

https://bugzilla.gnome.org/show_bug.cgi?id=674549